test/trivial/deitz/type-param-mod-config/invalid_param_loop.good
invalid_param_loop.chpl:3: error: param for-loops must be defined over a bounded param range
