test/trivial/deitz/type-param-mod-config/invalid_param_loop.chpl
const c = 3;

for param i in 1..c do
  writeln(i);
